package cars;

public interface Car {

        public void refuel();

        public String honk();

        public String speedUp();

}
